# LiganDock

./: README.md  docking_script.py  environment.yml  pyproject.toml
example/: 0FV.sdf
ligandock/: cli.py  dock.py  export.py  utils.py
modules/: pykvfinder.py
